FPLA-2767 - review: split aggregator and simplify tests